@@ -4,6 +4,8 @@ Changelog for CMFFormController
 
 CMFFormController 2.1.3 - Unreleased
 
+    - Purged old Zope 2 Interface interfaces for Zope 2.12 compatibility.
+      [elro]
 
 CMFFormController 2.1.2 - Released March 26, 2008
 
